--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     <p>Lastly, none of these upgrades are tested yet. I'll be posting videos of them as I work on the project. This is something I am building.</p>
     <p>Here are videos on the bike:</p>
     <ul>
-        <li><a href="https://www.youtube.com/watch?v=46ULECKE5zw" class="link" target="_blank">Video 1</a></li>
-        <li><a href="https://www.youtube.com/watch?v=0i6LCu_hQro" class="link" target="_blank">Video 2</a></li>
+        <li><a href="https://www.youtube.com/watch?v=46ULECKE5zw" class="link" target="_blank">Phethanfix Video</a></li>
+        <li><a href="https://www.youtube.com/watch?v=0i6LCu_hQro" class="link" target="_blank">Surronster Video</a></li>
     </ul>
 </section>
 
