--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <li><strong>(Throttle)</strong> Surron Throttle Handle Imitation Carbon Fiber (GBP 27.78)</li>
         <li><strong>(UnderGlow)</strong> 4PCS Wireless LED Strobe Lights (GBP 12.01)</li>
         <li><strong>(HeadLight)</strong> FG RACING Motorcycle Headlight (Black-3) (GBP 33.99)</li>
+        <li><strong>(Seat)</strong> FG RACING Dirt Bike Seat Cover (Black-s (GBP 18.99)</li>
     </ul>
 </section>
 
@@ -108,11 +109,11 @@
     <h2>Prices:</h2>
     <ul class="price-list">
         <li>Just Bike: <span class="price">1,051.60 GBP</span></li>
-        <li>Bike + Upgrades: <span class="price">1,315.72 GBP</span></li>
+        <li>Bike + Upgrades: <span class="price">1,334.71 GBP</span></li>
         <li>Bike + Extras: <span class="price">1,171.79 GBP</span></li>
-        <li>Extras + Upgrades: <span class="price">384.31 GBP</span></li>
-        <li>Bike + Upgrades + Extras: <span class="price">1,435.91 GBP</span></li>
-        <li>Bike + Upgrades + Extras + Legal Kit: <span class="price">1,590.01 GBP</span></li>
+        <li>Extras + Upgrades: <span class="price">403.3 GBP</span></li>
+        <li>Bike + Upgrades + Extras: <span class="price">1,454.90 GBP</span></li>
+        <li>Bike + Upgrades + Extras + Legal Kit: <span class="price">1,609 GBP</span></li>
     </ul>
 </section>
 
