--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         <li><strong>(Front Fender)</strong> JFG RACING Front Fender (Carbon) (GBP 27.03)</li>
         <li><strong>(Rear Fender)</strong> JFG RACING Sur Ron Rear Fender (Carbon) (GBP 18.77)</li>
         <li><strong>(Number Plate)</strong> LINGQI Racing Carbon Fiber Front Number Plate (Carbon) (GBP 19.52)</li>
-        <li><strong>(Throttle)</strong> Surron Throttle Handle Imitation Carbon Fiber (GBP 27.78)</li>
         <li><strong>(UnderGlow)</strong> 4PCS Wireless LED Strobe Lights (GBP 12.01)</li>
-        <li><strong>(HeadLight)</strong> FG RACING Motorcycle Headlight (Black-3) (GBP 33.99)</li>
+        <li><strong>(UnderGlow)</strong> 4PCS Wireless LED Strobe Lights (GBP 12.01)</li>
+        <li><strong>(Front Plate)</strong> Sur Ron Front Number Plate (Black) (GBP 7.89)</li>
         <li><strong>(Seat)</strong> FG RACING Dirt Bike Seat Cover (Black-s (GBP 18.99)</li>
     </ul>
 </section>
