--- a/index.html
+++ b/index.html
@@ -165,11 +165,16 @@
       </li>
     </ul>
   </section>
-
-  <!-- Prices -->
-  <section class="card">
-    <h2 class="text-2xl font-bold mb-4">Prices</h2>
-    <ul>
-      <li>Just Bike: <span class="price">1,051.60 GBP</span></li>
-      <li>Bike + Upgrades: <span class="price">1,314.82 GBP</span></li>
-      <li>Bike + Extras: <span class="price">1,171.
+  
+<!-- Prices -->
+<section class="card">
+  <h2 class="text-2xl font-bold mb-4">Prices</h2>
+  <ul>
+    <li>Just Bike: <span class="price">1,051.60 GBP</span></li>
+    <li>Bike + Upgrades: <span class="price">1,187.66 GBP</span></li>
+    <li>Bike + Extras: <span class="price">1,171.79 GBP</span></li>
+    <li>Upgrades + Extras: <span class="price">256.25 GBP</span></li>
+    <li>Bike + Upgrades + Extras: <span class="price">1,307.85 GBP</span></li>
+    <li>Bike + Upgrades + Extras + Legal Kit: <span class="price">1,424.77 GBP</span></li>
+  </ul>
+</section>
